deploy/k8s/apps/bachelor-demo/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bachelor-demo
spec:
  rules:
    - host: bachelor-demo.chrispicloud.dev
      http:
        paths:
          - path: /matomo
            pathType: Prefix
            backend:
              service:
                name: matomo
                port:
                  number: 80
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal
                port:
                  number: 80
